# bridge-rulebot

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: architecture.md  requirements.md
src/: config.rs  context.rs  decision.rs  derived.rs  lib.rs  rules.rs
tests/: rules.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
