[package]
name = "bridge-rulebot"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Deterministic rule-based cardplay bot with teachable reason codes"
repository = "https://github.com/bridge-craftwork/bridge-rulebot"

[dependencies]
bridge-types = { git = "https://github.com/bridge-craftwork/bridge-types" }

# std::time::Instant panics on wasm32-unknown-unknown; web-time is a drop-in
# Instant backed by performance.now(). Native builds never see it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
